syntax = "proto3";

package hello;

option java_package = "net.p1kachu.proto.hellostreamingworld";
option go_package = "git.p1kachu.net/testing-proto/go/services/hello";

service MultiGreeter {
  rpc SayHello (HelloRequest) returns (stream HelloReply) {}
}

message HelloRequest {
  message Data {
    string name = 1;
  }
  uint32 number = 1;
  Data data = 2;
}

message HelloReply {
  string message = 1;

  double   double_value   = 2;
  float    float_value    = 3;
  int32    int32_value    = 4;
  int64    int64_value    = 5;
  uint32   uint32_value   = 6;
  uint64   uint64_value   = 7;
  sint32   sint32_value   = 8;
  sint64   sint64_value   = 9;
  fixed32  fixed32_value  = 10;
  fixed64  fixed64_value  = 11;
  sfixed32 sfixed32_value = 12;
  sfixed64 sfixed64_value = 13;
  bool     boolean_value  = 14;
  string   string_value   = 15;
  bytes    bytes_value    = 16;

  Enum enum_value = 17;

  Data nested = 18;

  repeated string repeated_string = 19;
  repeated Data   repeated_nested = 20;

  Oneof single_string_oneof = 21;
  Oneof single_int32_oneof = 22;

  repeated Oneof repeated_oneof = 23;

  message Data {
    string nested_string = 1;
  }

  message Oneof {
    oneof string_or_int32 {
      string string = 1;
      int32  int32 = 2;
    }
  }

  enum Enum {
    ZERO = 0;
    ONE = 1;
  }
}
